[tool.poetry]
name = "yappa"
version = "0.3.7"
description = ""
authors = ["Mike <mikhail.g.novikov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.9"
python-slugify = "^3.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[tool.poetry.scripts]
yappa = 'yappa.cli:cli'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
